[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player/ClientPlayer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Player/Weapons/WeaponController.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player/Weapons/ShotgunClass.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Player/Weapons/SniperClass.gd" type="Script" id=6]

[sub_resource type="SphereMesh" id=1]
radius = 0.45
height = 0.9

[sub_resource type="CylinderShape" id=2]
radius = 0.4
height = 2.3

[node name="ClientPlayer" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05597, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, -6.69388e-10, -2.556e-17, 6.69388e-10, 1, 9.31323e-10, 0, -9.31323e-10, 1, 0, 0.172041, -3.72529e-09 )
cull_mask = 1048573
current = true
fov = 90.0
far = 8192.0

[node name="WeaponRayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -9999 )

[node name="GroundCheck" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="VPC" type="ViewportContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 896.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VC" type="Viewport" parent="Head/Camera/VPC"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="GunCamera" type="Camera" parent="Head/Camera/VPC/VC"]
cull_mask = 2
fov = 90.0

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.36027, 0 )
shape = SubResource( 2 )

[node name="WeaponClass" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="ShotgunClass" type="Spatial" parent="WeaponClass"]
script = ExtResource( 5 )

[node name="SniperClass" type="Spatial" parent="WeaponClass"]
script = ExtResource( 6 )

[node name="LoadoutClass" type="Node" parent="."]

[node name="StatsTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AbilityTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="UI" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="StatsTimer" to="." method="_on_StatsTimer_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_AbilityTimer_timeout"]
